kubernetes/prometheus/components/openshift/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: prometheus
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        cidrSelector: 10.101.1.6/32
    - type: Allow
      to:
        cidrSelector: 10.101.1.7/32
    - type: Allow
      to:
        cidrSelector: 10.0.0.5/32
    - type: Allow
      to:
        cidrSelector: 10.0.0.107/32
    - type: Allow
      to:
        cidrSelector: 10.0.0.108/32
    - type: Allow
      to:
        cidrSelector: 10.0.0.109/32
    - type: Allow
      to:
        dnsName: truenas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: minio.microshift.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: s3.unas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: router-apps.app.okd.homelab.arthurvardevanyan.com
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
